# aimrt_turtlesim

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  build.sh
cmake/: GetAimRT.cmake  GetSdl2.cmake
src/: CMakeLists.txt  car.cpp  car.h  game.cpp  game.h  main.cpp
src/install/: start_car.sh  start_teleop.sh
src/install/cfg/: car_cfg.yaml  teleop.cfg  teleop_cfg.yaml
src/module/car_module/: CMakeLists.txt  car_module.cpp  car_module.h
src/module/simulation_module/: simulation_module.cpp  simulation_module.h
src/module/teleop_module/: CMakeLists.txt  teleop_module.cpp  teleop_module.h
src/pkg/pkg_all/: CMakeLists.txt  pkg_main.cpp
src/protocol/car_proto/: CMakeLists.txt  car_proto.proto
